--- a/web.yml
+++ b/web.yml
@@ -13,57 +13,74 @@
     db_port: 3306
     service_dir: /usr/share/nginx/{{ service_name }}
   tasks:
-    - become: yes
+    - name: read line
+      become: yes
       lineinfile: dest=/etc/sysconfig/selinux regexp="^SELINUX=" line="SELINUX=permissive"
 
-    - become: yes
+    - name: something
+      become: yes
       command: setenforce 0
 
-    - yum: name=epel-release update_cache=yes state=present
+    - name: install epel
+      yum: name=epel-release update_cache=yes state=present
 
-    - become: yes
+    - name: install nginx and php/dependencies
+      become: yes
       yum: name=nginx,php,php-fpm,php-ldap,php-mbstring,php-mcrypt,php-mysql,php-phpunit-PHPUnit update_cache=yes state=present
       register: nginx_install
 
-    - become: yes
+    - name: install
+      become: yes
       shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
-    - become: yes
+    - name: replace nginx.conf in dest
+      become: yes
       copy: src=web/nginx.conf dest=/etc/nginx/nginx.conf mode=0000
       register: nginx_conf
 
-    - become: yes
+    - name: s
+      become: yes
       template: src=web/vhost.conf.j2 dest=/etc/nginx/conf.d/{{ service_name }}.conf mode=0644
       register: vhost_conf
 
-    - template: src=web/php.ini.j2 dest=/etc/php.ini mode=0644
+    - name: as
+      template: src=web/php.ini.j2 dest=/etc/php.ini mode=0644
       register: php_conf
 
-    - become: yes
+    - name: copy and register from php_fpm_conf
+      become: yes
       copy: src=web/php-fpm-web.conf dest=/etc/php-fpm.d/www.conf mode=0644
       register: php_fpm_conf
 
-    - become: yes
+    - name: print state when nginx is installed or nginx_conf/vhost_conf has changed
+      become: yes
       systemd: name=nginx state=restarted enabled=yes
       when: nginx_install|changed or nginx_conf|changed or vhost_conf|changed
 
-    - systemd: name=php-fpm state=restarted enabled=yes
+    - name: print state when nginx is installed or php has changed
+      systemd: name=php-fpm state=restarted enabled=yes
       when: nginx_install|changed or php_conf|changed or php_fpm_conf|changed
 
-    - become: yes
+    - name: print path
+      become: yes
       file: path="{{ service_dir }}" state=file
 
-    - become: yes
+    - name: unarchive
+      become: yes
       unarchive: src=web/{{ service_name }}.tgz dest="{{ service_dir }}" mode=0755
 
-    - become: yes
+    - name: change directory
+      become: yes
       command: /usr/local/bin/composer update chdir={{ service_dir }}
 
-    - become: yes
+    - name: change permission
+      become: yes
       command: chmod -R 0777 storage chdir="{{ service_dir }}"
 
-    - command: chown -R nginx:nginx . chdir="{{ service_dir }}"
+    - name: change ownership
+      command: chown -R nginx:nginx . chdir="{{ service_dir }}"
 
-    - become: yes
+    - name: samthing
+      become: yes
       template: src=web/env.j2 dest="{{ service_dir }}/.env" mode=0644 owner=nginx
 
