--- a/db.yml
+++ b/db.yml
@@ -3,27 +3,28 @@
   vars:
     db_password: password
   tasks:
-    - name: copy repo
-      copy: src=db/MariaDB.repo dest=/etc/yum.repos.d/MariaDB.repo mode=0644
+      - name: copy repo
+        copy: src=db/MariaDB.repo dest=/etc/yum.repos.d/MariaDB.repo mode=0644
 
-    - name: update server
-      become: yes
-      apt: name=MariaDB-server,MariaDB-client update_cache=yes state=present
+      - name: update server
+        become: yes
+        apt: name=MariaDB-server,MariaDB-client update_cache=yes state=present
 
-    - name: system state at start
-      become: yes
-      systemd: name=mariadb state=started enabled=yes
+      - name: manage mariadb service
+        become: yes
+        service: name=mariadb state=started enabled=yes
 
-    - name: temp
-      template: src=db/mariadb_answers.txt dest=/tmp/mariadb_answers.txt mode=0644
+      - name: template
+        template: src=db/mariadb_answers.txt dest=/tmp/mariadb_answers.txt mode=0644
 
-    - name: move 
-      become: yes
-      shell: /usr/bin/mysql_secure_installation </tmp/mariadb_answers.txt
+      - name: move 
+        become: yes
+        shell: /usr/bin/mysql_secure_installation </tmp/mariadb_answers.txt
 
-    - name: chmod of db.tgz
-      unarchive: src=db/db.tgz dest=~/ mode=0000
 
-    - name: db access
-      command: ./make_databases.sh {{ db_password }} localhost chdir=~/db
-      ignore_errors: True
+      - name: chmod of db.tgz
+        unarchive: src=db/db.tgz dest=~/ mode=0000
+
+      - name: db access
+        command: ./make_databases.sh {{ db_password }} localhost chdir=~/db
+        ignore_errors: True
