--- a/web.yml
+++ b/web.yml
@@ -54,11 +54,11 @@
 
     - name: print state when nginx is installed or nginx_conf/vhost_conf has changed
       become: yes
-      systemd: name=nginx state=restarted enabled=yes
+      service: name=nginx state=restarted enabled=yes
       when: nginx_install|changed or nginx_conf|changed or vhost_conf|changed
 
     - name: print state when nginx is installed or php has changed
-      systemd: name=php-fpm state=restarted enabled=yes
+      service: name=php-fpm state=restarted enabled=yes
       when: nginx_install|changed or php_conf|changed or php_fpm_conf|changed
 
     - name: print path
