names added and fixed errors

--- a/web.yml
+++ b/web.yml
@@ -13,41 +13,43 @@
     db_port: 3306
     service_dir: /usr/share/nginx/{{ service_name }}
   tasks:
-    - name: read line
+    - name: search for line and change
       become: yes
       lineinfile: dest=/etc/sysconfig/selinux regexp="^SELINUX=" line="SELINUX=permissive"
 
-    - name: something
+    - name: set selinux into permissive
       become: yes
       command: setenforce 0
 
     - name: install epel
+      become: yes
       yum: name=epel-release update_cache=yes state=present
 
-    - name: install nginx and php/dependencies
+    - name: install nginx and php
       become: yes
       yum: name=nginx,php,php-fpm,php-ldap,php-mbstring,php-mcrypt,php-mysql,php-phpunit-PHPUnit update_cache=yes state=present
       register: nginx_install
 
-    - name: install
+    - name: get
       become: yes
       shell: curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
     - name: replace nginx.conf in dest
       become: yes
-      copy: src=web/nginx.conf dest=/etc/nginx/nginx.conf mode=0000
+      copy: src=web/nginx.conf dest=/etc/nginx/nginx.conf mode=0640
       register: nginx_conf
 
-    - name: s
+    - name: move file
       become: yes
       template: src=web/vhost.conf.j2 dest=/etc/nginx/conf.d/{{ service_name }}.conf mode=0644
       register: vhost_conf
 
-    - name: as
+    - name: move file
+      become: yes
       template: src=web/php.ini.j2 dest=/etc/php.ini mode=0644
       register: php_conf
 
-    - name: copy and register from php_fpm_conf
+    - name: copy from web into etc
       become: yes
       copy: src=web/php-fpm-web.conf dest=/etc/php-fpm.d/www.conf mode=0644
       register: php_fpm_conf
@@ -58,14 +60,15 @@
       when: nginx_install|changed or nginx_conf|changed or vhost_conf|changed
 
     - name: print state when nginx is installed or php has changed
+      become: yes
       service: name=php-fpm state=restarted enabled=yes
       when: nginx_install|changed or php_conf|changed or php_fpm_conf|changed
 
     - name: print path
       become: yes
-      file: path="{{ service_dir }}" state=file
+      file: path="{{ service_dir }}" state=directory
 
-    - name: unarchive
+    - name: unzip
       become: yes
       unarchive: src=web/{{ service_name }}.tgz dest="{{ service_dir }}" mode=0755
 
@@ -80,7 +83,7 @@
     - name: change ownership
       command: chown -R nginx:nginx . chdir="{{ service_dir }}"
 
-    - name: samthing
+    - name: moving file
       become: yes
       template: src=web/env.j2 dest="{{ service_dir }}/.env" mode=0644 owner=nginx
 
