--- a/db.yml
+++ b/db.yml
@@ -4,27 +4,28 @@
     db_password: password
   tasks:
       - name: copy repo
+        become: yes
         copy: src=db/MariaDB.repo dest=/etc/yum.repos.d/MariaDB.repo mode=0644
 
       - name: update server
         become: yes
-        apt: name=MariaDB-server,MariaDB-client update_cache=yes state=present
+        apt: name=mariadb-server,mariadb update_cache=yes state=present
 
       - name: manage mariadb service
         become: yes
         service: name=mariadb state=started enabled=yes
 
-      - name: template
+      - name: moving file
         template: src=db/mariadb_answers.txt dest=/tmp/mariadb_answers.txt mode=0644
 
-      - name: move 
+      - name: move txt file
         become: yes
         shell: /usr/bin/mysql_secure_installation </tmp/mariadb_answers.txt
 
 
-      - name: chmod of db.tgz
+      - name: unzip
         unarchive: src=db/db.tgz dest=~/ mode=0000
 
-      - name: db access
+      - name: move into directory and create file
         command: ./make_databases.sh {{ db_password }} localhost chdir=~/db
         ignore_errors: True
