Updated files for assignment 3

--- a/ansible/web.yml
+++ b/ansible/web.yml
@@ -1,18 +1,21 @@
 ---
 - hosts: web
   vars:
-    db_password: password
     server_name: curriculum
     service_name: curriculum
     service_version: 1.0
-    app_key: QujjaJs3fxwtnTl7FiqhEEn1ACkf7YZW
     app_env: test
-    db_host: localhost
+    db_host: rdsiofmariadb.cnco0ir0ovuq.us-west-2.rds.amazonaws.com
     db_database: curriculum
-    db_username: curriculum
+    db_username: foo
     db_port: 3306
     service_dir: /usr/share/nginx/{{ service_name }}
+  vars_files:
+	- secrets.yml
   tasks:
+    - name: use secrets
+	  include_vars: secrets.yml
+	  
     - name: search for line and change
       become: yes
       lineinfile: dest=/etc/sysconfig/selinux regexp="^SELINUX=" line="SELINUX=permissive"
