--- a/ansible/db.yml
+++ b/ansible/db.yml
@@ -1,8 +1,11 @@
 ---
 - hosts: db
-  vars:
-    db_password: password
+  vars_files:
+	  - secrets.yml
   tasks:
+	  - name: use secret
+	    include_vars: secrets.yml
+		
       - name: copy repo
         become: yes
         copy: src=db/MariaDB.repo dest=/etc/yum.repos.d/MariaDB.repo mode=0644
@@ -27,5 +30,5 @@
         unarchive: src=db/db.tgz dest=~/ mode=0000
 
       - name: move into directory and create file
-        command: ./make_databases.sh {{ db_password }} localhost chdir=~/db
+        command: ./make_databases.sh {{ db_password }} rdsiofmariadb.cnco0ir0ovuq.us-west-2.rds.amazonaws.com chdir=~/db
         ignore_errors: True
