--- a/ansible/web.yml
+++ b/ansible/web.yml
@@ -5,7 +5,7 @@
     service_name: curriculum
     service_version: 1.0
     app_env: test
-    db_host: rdsiofmariadb.cnco0ir0ovuq.us-west-2.rds.amazonaws.com
+    db_host: rdsiofmariadb.cnco0ir0ovuq.us-west-2.rds.amazonaws.com:3306
     db_database: curriculum
     db_username: foo
     db_password: password
