--- a/ansible/web.yml
+++ b/ansible/web.yml
@@ -8,7 +8,7 @@
     db_host: rdsiofmariadb.cnco0ir0ovuq.us-west-2.rds.amazonaws.com:3306
     db_database: curriculum
     db_username: foo
-    db_password: password
+    db_password: barbarbar
     db_port: 3306
     service_dir: /usr/share/nginx/{{ service_name }}
   tasks:  
